Fix more of the intro spacing

--- a/Website/frontend/assets/css/_sass/partials/_marketing-redesign.scss
+++ b/Website/frontend/assets/css/_sass/partials/_marketing-redesign.scss
@@ -1155,7 +1155,7 @@ article.mobile-devices {
             padding-bottom: 0;
         }
         .body {
-            margin: 0;
+            margin: 0 0 -25px 0;
             font-size: 25px;
             .orange {
                 color: #f98e00;
